# KDD_COVID

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
notebooks/: 01_download.ipynb  02_ingestion.ipynb  03_discovery.ipynb  04_clean.ipynb  05_mapping.ipynb  05_statistics.ipynb  06_statistics.ipynb
src/: database.py
