[project]
name = "covid19"
authors = [
    {name = "Fortino Romero Mantilla", email = "2311080254@alumno.utpeubla.edu.mx"}
]
version = "0.1.0"
description = "Covid19 Knowledge Discovery from Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "pymongo>=4.17.0",
    "requests>=2.34.2",
]
